# Homework2

./: CMakeLists.txt  binary_operations.cpp  binary_operations.h  combinations tried  genetic_algorithm.cpp  genetic_algorithm.h  genetic_operators.cpp  genetic_operators.h  main.cpp  math_functions.cpp  math_functions.h  random_generators.cpp  random_generators.h
Code/: binary_operations.cpp  execution time  genetic_algorithm.cpp  main.cpp  math_functions.cpp  math_functions.h  random_generators.h
Code/homework2 agen results/: gray codes.txt  michalewicz.txt  rastrigin.txt  schwefels.txt
homework2 agen results/: dejong1.txt
